# fosslight_source_scanner

./: .bumpversion.cfg  .coderabbit.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  REUSE.toml  _write_oss_report_src.py  check_license_count.py  convert_scancode.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_scancode.py  setup.py  tox.ini
.chglog/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-release.yml  pull-request.yml  scancode_update.yml
.reuse/: dep5
LICENSES/: LicenseRef-LGE-Proprietary.txt  LicenseRef-MIT-like.txt
doc/: Guide_virtualenv_Kor.md  README_Kor.md
docs/: Guide_virtualenv.md  Guide_virtualenv_Kor.md  README_Kor.md
fosslight_source/: _parsing_scancode_file_item.py  _settings.py  _write_oss_report_src.py  convert_scancode.py  run_scancode.py
scancode_to_excel/: _parsing_scancode_file_item.py  _write_oss_report_src.py  convert_scancode.py  run_scancode.py
src/fosslight_source/: _help.py  _kb_client.py  _license_matched.py  _merge.py  _parsing_scancode_file_item.py  _parsing_scanoss_file.py  _scan_item.py  _scancode_ignore_binaries.py  _settings.py  _timer_thread.py  _write_oss_report_src.py  cli.py  convert_scancode.py  help.py  run_manifest_extractor.py  run_scancode.py  run_scanoss.py  run_spdx_extractor.py
src/fosslight_source.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: cli_test.py  scancode.json
test/.hidden_dir/: temp.txt
test_result_func_call/result/: fosslight_log_240927_1407.txt  scancode_raw_result.json  scanner_output.wfp
test_scan/: fosslight_log_src_240731_0600.txt  fosslight_log_src_240927_1332.txt  fosslight_log_src_240927_1407.txt  fosslight_log_src_240927_1409.txt  fosslight_report_src_240731_0600.xlsx  fosslight_report_src_240927_1332.xlsx  fosslight_report_src_240927_1407.xlsx  scan_result.csv  scancode_raw_result.json  scanner_output.wfp  scanoss_raw_result.json
test_scan2/: fosslight_log_src_240731_0601.txt  fosslight_log_src_240927_1333.txt  fosslight_log_src_240927_1408.txt  fosslight_log_src_240927_1409.txt  fosslight_report_src_240731_0601.xlsx  fosslight_report_src_240927_1333.xlsx  fosslight_report_src_240927_1408.xlsx  scan_exclude_result.csv  scancode_raw_result.json  scanner_output.wfp  scanoss_raw_result.json
test_scan3/: fosslight_log_src_240927_1410.txt  fosslight_report_src_240927_1410.xlsx  scancode_raw_result.json
tests/: cli_test.py  scancode_raw.json  test_tox.py
tests/json_result/: scan_has_error.json
tests/test_files/: dual.txt  run_scancode.py  run_scancode2.py  sample.cpp  spdx_lic.txt  temp.cpp  test_known_spdx.txt  test_unknown_spdx.txt
