# Copyright (c) 2026 LG Electronics
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fosslight_source"
version = "2.2.12"
description = "FOSSLight Source Scanner"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "LG Electronics" }
]
keywords = ["fosslight", "scanner", "license", "source"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "setuptools<=80.10.2",
    "pyparsing",
    "scanoss>=1.19.0",
    "XlsxWriter",
    "fosslight_util>=2.1.37",
    "PyYAML",
    "wheel>=0.38.1",
    "intbitset",
    "fosslight_binary>=5.0.0",
    "scancode-toolkit>=32.0.2",
    "fingerprints==1.2.3",
    "normality==2.6.1",
    # Python 3.13+ needs psycopg2-binary 2.9.10+ (has wheels; 2.9.9 builds fail with _PyInterpreterState_Get)
    "psycopg2-binary>=2.9.10; python_version >= '3.13'",
]

[project.optional-dependencies]
# none for now

[project.urls]
Homepage = "https://github.com/fosslight/fosslight_source_scanner"
Download = "https://github.com/fosslight/fosslight_source_scanner"

[project.scripts]
fosslight_source = "fosslight_source.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
